# apps/api/internal/api/v1/integrations/vk/controller.go
@@ -11,6 +11,7 @@ func Setup(router fiber.Router, services types.Services) fiber.Router {
 	middleware.Get("", get(services))
 	middleware.Get("auth", getAuth(services))
 	middleware.Post("", post(services))
+	middleware.Post("logout", logout(services))
 
 	return middleware
 }
@@ -82,6 +83,28 @@ func post(services types.Services) func(c *fiber.Ctx) error {
 
 		err = handlePost(c.Params("channelId"), dto, services)
 
+		if err != nil {
+			return err
+		}
+
+		return c.SendStatus(200)
+	}
+}
+
+// Integrations godoc
+// @Security ApiKeyAuth
+// @Summary      Logout
+// @Tags         Integrations|VK
+// @Accept       json
+// @Produce      json
+// @Param        channelId   path      string  true  "ID of channel"
+// @Success      200
+// @Failure 400 {object} types.DOCApiValidationError
+// @Failure 500 {object} types.DOCApiInternalError
+// @Router       /v1/channels/{channelId}/integrations/vk/logout [post]
+func logout(services types.Services) func(c *fiber.Ctx) error {
+	return func(c *fiber.Ctx) error {
+		err := handleLogout(c.Params("channelId"), services)
 		if err != nil {
 			return err
 		}
