# apps/api/internal/api/v1/integrations/vk/service.go
@@ -154,3 +154,22 @@ func handlePost(channelId string, dto *vkDto, services types.Services) error {
 
 	return nil
 }
+
+func handleLogout(channelId string, services types.Services) error {
+	integration, err := helpers.GetIntegration(channelId, "VK", services.DB)
+	if err != nil {
+		services.Logger.Sugar().Error(err)
+		return err
+	}
+	if integration == nil {
+		return fiber.NewError(http.StatusNotFound, "integration not found")
+	}
+
+	err = services.DB.Delete(&integration).Error
+	if err != nil {
+		services.Logger.Sugar().Error(err)
+		return fiber.NewError(http.StatusInternalServerError, "internal error")
+	}
+
+	return nil
+}
